--- a/Resume.html
+++ b/Resume.html
@@ -4,7 +4,7 @@
         <title>Kiruthiga_portfolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="resumestyle.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     </head>
     <body>
@@ -19,15 +19,13 @@
                 <li><a href="#Education">Education</a></li>
                 <li><a href="#Contact">Contact</a></li>
         </ul>     
-        </nav>
+        </nav> 
         <div id="Home">
-            <div class="image">
-                <div class="imagetext">
-                    <h1>Hello,</h1>
-                    <h1>I am Kiruthiga</h1>
-                    <p>And I am a Web Developer and Tester</p>
-                    <a href="Kiruthiga_IT" target = "blank" download><button>My Resume</button></a>
-                </div>
+            <div class="imagetext">
+                <h1>Hello,</h1>
+                <h1>I am Kiruthiga</h1>
+                <p>And I am a Web Developer and Tester</p>
+                <a href="Kiruthiga_IT" target = "blank" download><button>My Resume</button></a>
             </div>
         </div>
     </section>
