--- a/Resume.html
+++ b/Resume.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     </head>
     <body>
-    <section class="header">
+    <header>
+    
         <nav>
             <ul>
                 <li><a href="#Home">Home</a></li>
@@ -28,7 +29,8 @@
                 <a href="Kiruthiga_IT" target = "blank" download><button>My Resume</button></a>
             </div>
         </div>
-    </section>
+    
+    </header>
     <main>
         <section id="About">
             <h2>About</h2>
